# labstreaminglayer

Apps/BrainProducts/BrainAmpSeries/: mainwindow.cpp
LSL/liblsl-Android/: readme.txt
LSL/liblsl-Android/Legacy/jni/: Android.mk
LSL/liblsl-Android/Native/: settings.gradle
LSL/liblsl-Android/Native/app/: build.gradle
LSL/liblsl-Android/Native/app/src/androidTest/java/com/dcscorp/anative/: ExampleInstrumentedTest.java
LSL/liblsl-Android/Native/app/src/main/: AndroidManifest.xml
LSL/liblsl-Android/Native/app/src/test/java/com/dcscorp/anative/: ExampleUnitTest.java
LSL/liblsl-Android/Native/liblsl-java/: build.gradle
LSL/liblsl-Android/Native/liblslcmake/: CMakeLists.txt  build.gradle  proguard-rules.pro
LSL/liblsl-Android/Native/liblslcmake/src/androidTest/java/com/dcscorp/liblslcmake/: ExampleInstrumentedTest.java
LSL/liblsl-Android/Native/liblslcmake/src/main/: AndroidManifest.xml
LSL/liblsl-Android/Native/liblslcmake/src/main/res/values/: strings.xml
LSL/liblsl-Android/Native/liblslcmake/src/test/java/com/dcscorp/liblslcmake/: ExampleUnitTest.java
LSL/liblsl-Android/Native/liblslnative/: build.gradle
LSL/liblsl-Android/Native/liblslnative/src/androidTest/java/com/dcscorp/liblslnative/: ExampleInstrumentedTest.java
LSL/liblsl-Android/Native/liblslnative/src/main/: AndroidManifest.xml
LSL/liblsl-Android/Native/liblslnative/src/main/res/values/: strings.xml
LSL/liblsl-Android/jni/: Android.mk
LSL/liblsl-Java/edu/ucsd/sccn/: LSL.java
LSL/liblsl-Java/src/edu/ucsd/sccn/: LSL.java
(+1 files in other folders)
